# rust_sqlite_project2_jcb

./: Makefile  README.md
polars-hello-world-code-whisperer/src/: main.rs
rust_yahoo_finance/: Cargo.toml  README  README.md  findata.db
rust_yahoo_finance/src/: lib.rs  main.rs
yahoo_finance/: Cargo.toml
yahoo_finance/src/: main.rs
