[package]
name = "yahoo_finance_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.33.2", features = ["lazy", "describe"] }
yahoo_finance_api = "2.1.0"
clap = {version="4.0.32", features=["derive"]}
reqwest = { version = "0.11", default-features=false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
time = { version = "0.3", features = ["macros"] }
select = "0.6"
tokio-test = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread"]}

[features]
blocking = ["reqwest/blocking"]

